# RDPWrapOffsetFinder

./: .gitignore  LICENSE  README.md  __init__.py  build_exe.py  cli.py  dbghelp.py  disasm.py  exception_table.py  gui.py  imports.py  main.py  ms_pdb.py  nosymbol.py  nosymbol_arch.py  patches.py  pdb.py  pe_image.py  pyproject.toml  requirements.txt  symbols.py  termsrv.py  version.py  winver.py
.github/workflows/: build.yml
.workbuddy/memory/: 2026-06-22.md  2026-06-23.md  MEMORY.md
scripts/: check_arch_labels.py  compare_all.py  compare_report.csv  diff_report.html  full_report.html  gen_diff_report.py  gen_full_report.py
src/rdpwrap_offset_finder/: __init__.py  cli.py  dbghelp.py  disasm.py  exception_table.py  imports.py  nosymbol.py  patches.py  pdb.py  pe_image.py  symbols.py  termsrv.py  winver.py
tests/: _asmharness.py  conftest.py  test_exception_table.py  test_nosymbol_xref.py  test_patches.py  test_pe_image.py  test_termsrv_normalize.py  test_winver.py
