[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdpwrap-offset-finder"
version = "0.2.0-pre.1"
description = "Find offsets for RDPWrap (termsrv.dll) and generate rdpwrap.ini sections"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "bobo", email = "unknown@example.com" }
]
keywords = ["rdp", "rdpwrap", "reverse-engineering", "windows", "dll"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Reverse Engineering",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]
dependencies = [
  "pefile>=2023.2.7",
  "iced-x86>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "pyinstaller>=5.0"
]

[project.scripts]
rdpwrap-offset-finder = "cli:main"
rdpwrap-offset-finder-gui = "gui:main"

[project.urls]
Homepage = "https://github.com/bobotechnology/RDPWrapOffsetFinder"
Repository = "https://github.com/bobotechnology/RDPWrapOffsetFinder"
Issues = "https://github.com/bobotechnology/RDPWrapOffsetFinder/issues"
